# Rusty

./: 2G_CounterNames.txt  2G_PmNames.txt  Cargo.toml  ConfParser2G.txt  ftp_config_huawei.json  parser2G_config_huawei.json  parser3G_config_huawei.json  parser4G_config_huawei.json
c# parsers/: Parser2G.cs  Parser3G.cs  Parser3G_Daily.cs  Parser4G.cs  Parser4G_5G.cs  Parser5G.cs  Parser_HWI.cs
src/: main.rs  utils.rs
src/enums/: enum_parser_type.rs
src/models/: cgi.rs  cli.rs  ftp_config.rs  input_param.rs  parser_gsm.rs  parser_umts.rs  pm.rs
src/traits/: common_param.rs
xml/: A20210310.0800+0200-0900+0200_VN4527.xml
