[package]
name = "RustXmlParsers"
version = "0.1.0"
authors = ["stefanvelinov"]
edition = "2018"

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
structopt = "0.3.13"
chrono = "0.4"
strum = "0.20"
strum_macros = "0.20"
boolinator = "2.4.0"
ftp = "3.0.1"
flate2 = "1.0.20"
tar = "0.4.33"
regex = "1.4.3"
whoami = "1.1.0"
